Changelog
=========

2.0.14 (unreleased)
-------------------

- Nothing changed yet.


2.0.13 (2013-03-17)
-------------------

- Fix exception when use_email_as_login is on and the user enters
  an invalid login on pwreset_form.
  [davisagli]


2.0.12 (2013-03-05)
-------------------

- Fixed typo in registered_notify_template.pt: capitalization of sentence start.


2.0.11 (2013-01-13)
-------------------

- Fixed undefined django_crypto.
  [maurits]


2.0.10 (2012-12-09)
-------------------

- Use system random when available. This is part of the fix for
  https://plone.org/products/plone/security/advisories/20121106/24
  [davisagli]

- registered_notify_template.pt: show login name instead of user id.
  Normally this is the same, but this is not necessarily true when
  using the email address as login name.
  [maurits]


2.0.9 (2012-08-30)
------------------

- Changed deprecated getSiteEncoding to hardcoded `utf-8`
  [tom_gross]


2.0.8 (2012-05-25)
------------------

- Be less sensitive for white space differences in tests.
  [maurits]


2.0.7 (2011-11-24)
------------------

- getExpirationTimeout() now returns the correct number of hours, and not a value 24*24 times too low.
  (The code was never used though, since _timedelta does currently not store a timedelta but an int.)
  [kleist]


2.0.6 - 2011-06-02
------------------

- Apply patch to prevent exploitation of CVE-2011-1948 (Hotfix 20110531.)
  [elro]

- Fix edge case where member.fullname returns None instead of a string (ZMI 
  or emergency user resets)
  [eleddy]

2.0.5 - 2011-01-03
------------------

- Depend on ``Products.CMFPlone`` instead of ``Plone``.
  [elro]

- URL for login form is now '/login' instead of 'login_form', adjust tests
  accordingly.
  [esteele]
  
2.0.4 - 2010-11-23
------------------

- Fallback import to work with Plone 3.
  [elro]

2.0.3 - 2010-09-20
------------------

- Fix the fix to http://dev.plone.org/plone/ticket/11136.
  [davisagli]
